FIX: updateFavorite
